demo with Templated DH_type all in one builder

--- a/branches/schaaf/CEP/Demo/Platform/RingSim/src/RingSim/Makefile
+++ b/branches/schaaf/CEP/Demo/Platform/RingSim/src/RingSim/Makefile
@@ -3,7 +3,7 @@
 #	Use MPI=1 if you want to compile with MPI support.		#
 #########################################################################
 
-EXES	= routetest
+EXES	= ttest routetest
 LIBNAME = routesim
 
 
