--- a/trunk/CEP/Demo/Platform/RadioDemo/src/RadioSim/Makefile
+++ b/trunk/CEP/Demo/Platform/RadioDemo/src/RadioSim/Makefile
@@ -8,7 +8,7 @@ EXES	= Simulate
 LIBNAME = lofarsim
 LIBS    = ../../BaseSim/$(ALIBDIR)/libbasesim.a
 
-AIPSPP  = 1
+#AIPSPP  = 1
 
 include ../../BaseSim/Makedefs 
 
