--- a/autoconf_share/Makefile.common
+++ b/autoconf_share/Makefile.common
@@ -44,28 +44,34 @@ SUFFIXES = .idl
 
 
 
-# Rules for building documentation via doxygen.
-docall:
-	@cp $(top_builddir)/.doxygenrc doxygen.cfg
-	@projnm=`basename $(srcdir)`
-	@echo "PROJECT_NAME = $$projnm" >> doxygen.cfg
-	@echo "INPUT = $(srcdir)" >> doxygen.cfg
-	@echo 'RECURSIVE = YES' >> doxygen.cfg
-	$(DOXYGEN) doxygen.cfg
+# Rules for building documentation using doxygen or doc++.
+# Default output directory is docxxhtml.
+DOCDIR := docxxhtml
 
 doc:
-	cp $(top_builddir)/.doxygenrc doxygen.cfg
-	@projnm=`basename $(srcdir)`
-	@echo "PROJECT_NAME = $$projnm" >> doxygen.cfg
-	@echo "INPUT = $(srcdir)" >> doxygen.cfg
-	echo 'RECURSIVE = NO' >> doxygen.cfg
-	$(DOXYGEN) doxygen.cfg
+	@if [ "$(lofar_doctool)" = "doxygen" ] ; then \
+	  cp $(top_builddir)/.doxygenrc doxygen.cfg ; \
+	  projnm=`(cd $(srcdir) && pwd) | sed -e "s%.*/LOFAR/%%"` ; \
+	  echo "PROJECT_NAME = $$projnm" >> doxygen.cfg ; \
+	  echo "INPUT = $(srcdir)" >> doxygen.cfg ; \
+	  echo "RECURSIVE = YES" >> doxygen.cfg ; \
+	  echo "HTML_OUTPUT = $(DOCDIR)" >> doxygen.cfg ; \
+	  $(DOXYGEN) doxygen.cfg ; \
+	else \
+	  $(DOCPP) $(DOCPPFLAGS) --dir $(DOCDIR) `find $(srcdir) -name "*.h" -print` ; \
+	fi
 
-
-
-# Rules for building documentation via doc++.
-docppall:
-	$(DOCPP) $(DOCPPFLAGS) `find $(srcdir) -name "*.h" -print`
-
-docpp:
-	$(DOCPP) $(DOCPPFLAGS) $(srcdir)/*.h
+docthis:
+	echo $(lofar_doctool) "$(DOCDIR)"
+	@if [ "$(lofar_doctool)" = "doxygen" ] ; then \
+	echo $(lofar_doctool) "$(DOCDIR)" ; \
+	  cp $(top_builddir)/.doxygenrc doxygen.cfg ; \
+	  projnm=`(cd $(srcdir) && pwd) | sed -e "s%.*/LOFAR/%%"` ; \
+	  echo "PROJECT_NAME = $$projnm" >> doxygen.cfg ; \
+	  echo "INPUT = $(srcdir)" >> doxygen.cfg ; \
+	  echo "RECURSIVE = NO" >> doxygen.cfg ; \
+	  echo "HTML_OUTPUT = $(DOCDIR)" >> doxygen.cfg ; \
+	  $(DOXYGEN) doxygen.cfg ; \
+	else \
+	  $(DOCPP) $(DOCPPFLAGS) --dir $(DOCDIR) $(srcdir)/*.h ; \
+	fi
