--- a/trunk/CEP/CPA/PSCF/configure.in
+++ b/trunk/CEP/CPA/PSCF/configure.in
@@ -2,7 +2,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 AC_INIT(src/DMI.h)
-AC_CONFIG_AUX_DIR(config)
+dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(PSCF, 0.1)
