--- a/trunk/CEP/CPA/PSCF/Makefile.am
+++ b/trunk/CEP/CPA/PSCF/Makefile.am
@@ -1,4 +1,3 @@
 SUBDIRS=src test 
-DOC_SUBDIRS=src
 
-include $(top_srcdir)/../../../autoconf_share/Makefile.common
+include $(lofar_sharedir)/Makefile.common
