--- a/trunk/CEP/CPA/PSCF/configure.in
+++ b/trunk/CEP/CPA/PSCF/configure.in
@@ -7,6 +7,9 @@ dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(PSCF, 0.1)
 
+dnl Initialize for LOFAR (may set compilers)
+lofar_INIT
+
 dnl Checks for programs.
 AC_PROG_AWK
 AC_PROG_YACC
@@ -47,12 +50,10 @@ AC_FUNC_VPRINTF
 dnl
 dnl Check for LOFAR specific things
 dnl
-lofar_INIT
 lofar_DEBUG_OPTIMIZE
-dnl lofar_FIREWALLS
 lofar_CORBA
 dnl lofar_MATLAB
-dnl lofar_AIPSPP
+lofar_AIPSPP
 dnl lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
