--- a/trunk/CEP/Tools/PerfTest/P2Perf/configure.in
+++ b/trunk/CEP/Tools/PerfTest/P2Perf/configure.in
@@ -7,6 +7,9 @@ dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(P2Perf, 0.1)
 
+dnl Initialize for LOFAR (may set compilers)
+lofar_INIT
+
 dnl Checks for programs.
 AC_PROG_AWK
 AC_PROG_YACC
