--- a/CEP/CPA/PSCF/src/pscf/Makefile.am
+++ b/CEP/CPA/PSCF/src/pscf/Makefile.am
@@ -6,7 +6,7 @@ CXXFLAGS += -Wno-unknown-pragmas
 lib_LTLIBRARIES = libpscf.la
 
 libpscf_la_SOURCES = Dispatcher.cc  Message.cc  MsgAddress.cc  \
-	WorkProcess.cc  WPQueue.cc Timestamp.cc PSCFDebugContext.cc
+	WPInterface.cc WorkProcess.cc Timestamp.cc PSCFDebugContext.cc
 
 include $(lofar_sharedir)/Makefile.common
 
