--- a/trunk/CEP/CPA/PSCF/Makefile.am
+++ b/trunk/CEP/CPA/PSCF/Makefile.am
@@ -1,3 +1,8 @@
 SUBDIRS=src test 
 
+ids:
+	(cd src && make ids)
+	(cd src/pscf && make ids)
+	(cd test && make ids)
+
 include $(lofar_sharedir)/Makefile.common
