Cleaned up after divorcing with DMI, added make aids target.

--- a/CEP/CPA/PSCF/configure.in
+++ b/CEP/CPA/PSCF/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_INIT(src/DMI.h)
+AC_INIT(src/Message.h)
 dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
@@ -64,7 +64,6 @@ dnl Output Makefiles
 dnl
 AC_OUTPUT(
 src/Makefile
-src/pscf/Makefile
 test/Makefile 
 Makefile
 )
