--- a/trunk/CEP/CPA/PSCF/test/Makefile.am
+++ b/trunk/CEP/CPA/PSCF/test/Makefile.am
@@ -1,31 +1,29 @@
 CXXFLAGS += -Wno-unknown-pragmas
 
-INCLUDES			= -I$(top_srcdir)/src -I$(top_srcdir)/src/pscf
+dmi_dir = $(lofar_sharedir)/../DMI
 
-check_PROGRAMS			= test_crefs test_pscf
+dmi_lib = $(dmi_dir)/build/src/libdmi.la
 
-bin_PROGRAMS   =  test_gw
+INCLUDES		= -I$(dmi_dir)/src -I$(top_srcdir)/src
 
-test_crefs_SOURCES 		= test_crefs.cc
+check_PROGRAMS		= test_pscf
 
-test_crefs_LDADD		= $(top_builddir)/src/libdmi.la
+bin_PROGRAMS   		= test_gw
 
-test_pscf_SOURCES 		= test_pscf.cc EchoWP.cc AID-Testing-Registry.cc
+test_pscf_SOURCES 	= test_pscf.cc EchoWP.cc AID-Testing-Registry.cc
 
-test_pscf_LDADD		= $(top_builddir)/src/pscf/libpscf.la \
-$(top_builddir)/src/libdmi.la 
+test_pscf_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
 
-test_gw_SOURCES 		= test_gw.cc EchoWP.cc AID-Testing-Registry.cc
+test_gw_SOURCES 	= test_gw.cc EchoWP.cc AID-Testing-Registry.cc
 
-test_gw_LDADD		= $(top_builddir)/src/pscf/libpscf.la \
-$(top_builddir)/src/libdmi.la 
+test_gw_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
 
-TESTS				= test_crefs test_pscf
+TESTS				=  test_pscf
 
 EXTRA_DIST			=
 
 # script used to generate AID maps
-MAPBUILDER = $(top_srcdir)/src/build_aid_maps.pl 
+MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
 
 # All .aidlist files below this dir will be scanned
 BASELISTDIR = $(lofar_sharedir)/..
@@ -33,8 +31,7 @@ BASELISTDIR = $(lofar_sharedir)/..
 # Your package's subdirectory
 AID_DIR = $(top_srcdir)/test
 
-ids:
+aids:
 	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h
-
 
 include $(lofar_sharedir)/Makefile.common
