--- a/trunk/CEP/CPA/PSCF/test/Makefile.am
+++ b/trunk/CEP/CPA/PSCF/test/Makefile.am
@@ -8,7 +8,7 @@ INCLUDES		= -I$(dmi_dir)/src -I$(top_srcdir)/src
 
 check_PROGRAMS		= test_pscf
 
-bin_PROGRAMS   		= test_gw
+bin_PROGRAMS   		= test_gw test_ping
 
 test_pscf_SOURCES 	= test_pscf.cc EchoWP.cc AID-Testing-Registry.cc
 
@@ -17,6 +17,10 @@ test_pscf_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
 test_gw_SOURCES 	= test_gw.cc EchoWP.cc AID-Testing-Registry.cc
 
 test_gw_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
+
+test_ping_SOURCES 	= test_ping.cc EchoWP.cc AID-Testing-Registry.cc
+
+test_ping_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
 
 TESTS				=  test_pscf
 
