--- a/CEP/CPA/PSCF/test/Makefile.am
+++ b/CEP/CPA/PSCF/test/Makefile.am
@@ -8,19 +8,24 @@ INCLUDES		= -I$(dmi_dir)/src -I$(top_srcdir)/src
 
 check_PROGRAMS		= test_pscf
 
-bin_PROGRAMS   		= test_gw test_ping
+bin_PROGRAMS   		= test_gw test_ping test_glish
 
 test_pscf_SOURCES 	= test_pscf.cc EchoWP.cc AID-Testing-Registry.cc
 
-test_pscf_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
+test_pscf_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
 
 test_gw_SOURCES 	= test_gw.cc EchoWP.cc AID-Testing-Registry.cc
 
-test_gw_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
+test_gw_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
 
 test_ping_SOURCES 	= test_ping.cc EchoWP.cc AID-Testing-Registry.cc
 
-test_ping_LDADD		= $(top_builddir)/src/libpscf.la $(dmi_lib)
+test_ping_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
+
+test_glish_SOURCES 	= test_glish.cc EchoWP.cc AID-Testing-Registry.cc
+
+test_glish_LDADD		= $(top_builddir)/src/Glish/liboctopussy-glish.la \
+  $(top_builddir)/src/liboctopussy.la $(dmi_lib) -lglish -lsos -lnpd
 
 TESTS				=  test_pscf
 
