Major revisions: - added PF_UNIX sockets for local connections - added peer auto-discovery to gateways, plus major other revisions

--- a/CEP/CPA/PSCF/src/Makefile.am
+++ b/CEP/CPA/PSCF/src/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = . Glish
 
 INCLUDES = -I$(dmi_dir)/src
 
-CXXFLAGS += -Wall -Wno-unknown-pragmas 
+CXXFLAGS += -Wall -Wno-unknown-pragmas -pg
 
 lib_LTLIBRARIES = liboctopussy.la
 
