--- a/CEP/CPA/PSCF/test/Makefile.am
+++ b/CEP/CPA/PSCF/test/Makefile.am
@@ -1,4 +1,4 @@
-CXXFLAGS += -Wno-unknown-pragmas
+CXXFLAGS += -Wno-unknown-pragmas -pg
 
 dmi_dir = $(lofar_sharedir)/../DMI
 
@@ -8,7 +8,7 @@ INCLUDES		= -I$(dmi_dir)/src -I$(top_srcdir)/src
 
 check_PROGRAMS		= test_pscf
 
-bin_PROGRAMS   		= test_gw test_ping test_glish
+bin_PROGRAMS   		= test_gw test_gw0 test_ping test_glish
 
 test_pscf_SOURCES 	= test_pscf.cc EchoWP.cc AID-Testing-Registry.cc
 
@@ -17,6 +17,10 @@ test_pscf_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
 test_gw_SOURCES 	= test_gw.cc EchoWP.cc AID-Testing-Registry.cc
 
 test_gw_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
+
+test_gw0_SOURCES 	= test_gw0.cc AID-Testing-Registry.cc
+
+test_gw0_LDADD		= $(top_builddir)/src/liboctopussy.la $(dmi_lib)
 
 test_ping_SOURCES 	= test_ping.cc EchoWP.cc AID-Testing-Registry.cc
 
