Fixed include statements etc. The project now actually builds.

--- a/CEP/CPA/uvplot/src/Makefile.am
+++ b/CEP/CPA/uvplot/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS   := uvplot
-uvplot_SOURCES := main.cc mainwin.cc mainwin.moc.cc \
+uvplot_SOURCES := main.cc UVPMainWindow.cc UVPMainWindow.moc.cc \
                   UVPDisplayArea.cc \
                   UVPPixel.cc     \
                   UVPAxis.cc      \
@@ -9,13 +9,13 @@ uvplot_SOURCES := main.cc mainwin.cc mainwin.moc.cc \
 # Your package's subdirectory
 UVPLOT_DIR := $(top_srcdir)/src
 
-QT_DIR     := /home/brentjens/usr/src/qt-2.3.2
-MOC        := $(QT_DIR)/bin/moc
+#QT_DIR     := /home/brentjens/usr/src/qt-2.3.2
+#MOC        := $(QT_DIR)/bin/moc
 
-%.moc.cc: %.h
-	$(MOC) $< -o $@
+#%.moc.cc: %.h
+#	$(MOC) $< -o $@
 
-CXXFLAGS += -Wall -I$(QT_DIR)/include -L$(QT_DIR)/lib -lqt
+CXXFLAGS += -Wall #-I$(QT_DIR)/include -L$(QT_DIR)/lib -lqt
 
 
 include $(lofar_sharedir)/Makefile.common
