--- a/CEP/CPA/uvplot/configure.in
+++ b/CEP/CPA/uvplot/configure.in
@@ -1,7 +1,7 @@
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-AC_INIT(src/display_area.h)
+AC_INIT(src/UVPDisplayArea.h)
 dnl AC_CONFIG_AUX_DIR(config)
 dnl AM_CONFIG_HEADER(config/config.h)
 AM_CONFIG_HEADER(config.h)
