Minor changes for the new build environment. Everything was re-generated through Rose with the new include paths, hence wolrd+dog has changed

--- a/CEP/CPA/PSCF/src/Makefile.am
+++ b/CEP/CPA/PSCF/src/Makefile.am
@@ -2,7 +2,7 @@ dmi_dir = $(lofar_sharedir)/../DMI
 
 SUBDIRS = . Glish
 
-INCLUDES = -I$(dmi_dir)/src -I$(lofar_sharedir)/../src-links
+# INCLUDES = -I$(dmi_dir)/src -I$(lofar_sharedir)/../src-links
 
 CXXFLAGS += -Wall -Wno-unknown-pragmas -pg
 
