--- a/trunk/CEP/CPA/PSCF/configure.in
+++ b/trunk/CEP/CPA/PSCF/configure.in
@@ -53,11 +53,11 @@ dnl
 lofar_DEBUG_OPTIMIZE
 lofar_CORBA
 dnl lofar_MATLAB
-lofar_AIPSPP
+lofar_AIPSPP(1)
 dnl lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
-dnl lofar_BASESIM
+lofar_PACKAGE(DMI)
 
 dnl
 dnl Output Makefiles
