Moved to new build environment.
in UVPMainWindow I made UVPTimeFrequencyPlot the canvas class.

Started to use <Common/Debug.h> for debugging.

--- a/CEP/CPA/uvplot/src/Makefile.am
+++ b/CEP/CPA/uvplot/src/Makefile.am
@@ -2,10 +2,12 @@ bin_PROGRAMS   := uvplot
 uvplot_SOURCES := main.cc \
                   UVPMainWindow.cc   UVPMainWindow.moc.cc  \
                   UVPDisplayArea.cc  UVPDisplayArea.moc.cc \
-                  UVPPixel.cc     \
-                  UVPAxis.cc      \
-                  UVPImageCube.cc \
-                  UVPSpectrum.cc  \
+                  UVPPixel.cc          \
+                  UVPAxis.cc           \
+                  UVPImageCube.cc      \
+                  UVPSpectrum.cc       \
+                  UVPSpectrumVector.cc \
+                  UVPTimeFrequencyPlot.cc UVPTimeFrequencyPlot.moc.cc \
                   UVPUVCoverageArea.cc UVPUVCoverageArea.moc.cc
 
 
@@ -18,7 +20,7 @@ UVPLOT_DIR := $(top_srcdir)/src
 #%.moc.cc: %.h
 #	$(MOC) $< -o $@
 
-CXXFLAGS += -pg #-I$(QT_DIR)/include -L$(QT_DIR)/lib -lqt
+CXXFLAGS += -DDEBUG_MODE -pg #-I$(QT_DIR)/include -L$(QT_DIR)/lib -lqt
 
 
 include $(lofar_sharedir)/Makefile.common
