Changed TRACER lines. Functions start with #if(DEBUG_MODE)   TRACER1(__PRETTY_FUNCTION__); #endif
and end with

#if(DEBUG_MODE)
  TRACER1("End: " << __PRETTY_FUNCTION__);
#endif

Ofcourse lower level functions have TRACER2, TRACER3, etc...

--- a/CEP/CPA/uvplot/src/Makefile.am
+++ b/CEP/CPA/uvplot/src/Makefile.am
@@ -15,13 +15,8 @@ uvplot_SOURCES := main.cc \
 # Your package's subdirectory
 UVPLOT_DIR := $(top_srcdir)/src
 
-#QT_DIR     := /home/brentjens/usr/src/qt-2.3.2
-#MOC        := $(QT_DIR)/bin/moc
 
-#%.moc.cc: %.h
-#	$(MOC) $< -o $@
-
-CXXFLAGS += -pg #-I$(QT_DIR)/include -L$(QT_DIR)/lib -lqt
+CXXFLAGS += -DDEBUG_MODE -pg
 
 
 include $(lofar_sharedir)/Makefile.common
