%[BugId: 7]% Changed lofar_init to add a directory to CPPFLAGS for making .i file Added a rule to Makefiole.common for turning .c into .i

--- a/autoconf_share/Makefile.common
+++ b/autoconf_share/Makefile.common
@@ -21,6 +21,8 @@ clean-generic:
 # Only preprocess the file.
 %.i: %.cc
 	$(CC) -E $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $< > $@
+%.i: %.c
+	$(CC) -E $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $< > $@
 
 
 # Rules for preprocessing idl files.
