%[BugId: 11]% Added WH_Correlator

--- a/CEP/Tools/PerfTest/Transpose/src/Makefile.am
+++ b/CEP/Tools/PerfTest/Transpose/src/Makefile.am
@@ -3,15 +3,17 @@ bin_PROGRAMS	= Transpose
 DOCHDRS 	=				\
 DH_2DMatrix					\
 Transpose.h					\
-WH_FillTFMatrix.h					\
-WH_Transpose.h
+WH_FillTFMatrix.h				\
+WH_Transpose.h					\
+WH_Correlate.h
 
 Transpose_SOURCES  	= $(DOCHDRS)		\
 DH_2DMatrix.cc					\
 Transpose.cc					\
 Simulate.cc					\
-WH_FillTFMatrix.cc					\
-WH_Transpose.cc					
+WH_FillTFMatrix.cc				\
+WH_Transpose.cc					\
+WH_Correlate.cc				
 
 Transpose_DEPENDENCIES = $(LOFAR_DEPEND)
 
