%[BugId: 18]% First working version of MSFiller.

--- a/CEP/CPA/UVD/src/Makefile.am
+++ b/CEP/CPA/UVD/src/Makefile.am
@@ -1,13 +1,16 @@
 dmi_dir = $(lofar_sharedir)/../DMI
 
-CXXFLAGS += -Wno-unknown-pragmas -pg
+CXXFLAGS += -Wno-unknown-pragmas -DAIPSPP_HOOKS -pg
 
 lib_LTLIBRARIES = libuvd.la
 
 libuvd_la_SOURCES = \
   AID-UVD-Registry.cc \
   MSIntegratorWP.cc \
-  UVSorterWP.cc
+  UVSorterWP.cc \
+  MSFillerWP.cc \
+  MSReader.cc \
+  MSFiller.cc 
   
 # script used to generate AID maps
 MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
